--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "erp-webapp",
+  "name": "sunflag-erp-webapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,12 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.29",
     "next": "15.5.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
